change some personal info

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
   </head>
   <body>
-    <h1>Ciallo～(∠・ω&gt; )⌒★</h1>
+    <h1>Hello～(∠・ω&gt; )⌒★</h1>
     <img src="images/PortraitF.jpg" alt="Yeah!!!.jpg" style="width: 50%; height: auto;"/>
     <p style="text-align: center; font-size: 12px;">click the picture to switch portrait!</p>
     <h2>HERE IS THE PERSONAL HOMEPAGE OF ZHI XINGTONG</h2>
     <p><Strong>BASIC INFORMATION: </Strong></p>
     <ul>
-      <li>High School Student/17/China</li>
-      <li>US College Application in Progress/CS Major/Preffered Schools: <a href="https://www.berkeley.edu/">UCB</a>, <a href="https://illinois.edu/">UIUC</a>, <a href="https://www.washington.edu/">UW-Settle</a></li>
+      <li>Undergraduate Student/18/Hong Kong</li>
+      <li><a href="https://www.hku.hk/">Hong Kong University</a>/<a href="https://admissions.hku.hk/programmes/undergraduate-programmes/bachelor-of-arts-and-bachelor-of-engineering-artificial">AI Major</a>/</li>
       <li>Interest: Anime & Painting & Japanese Songs, especially <a href="https://www.bilibili.com/opus/650388031755255831">术力口</a></li>
       <ul>
         <li>Favorite Anime: <a href="https://www.bilibili.com/video/BV1ks41117be/?vd_source=2a15ebcbdd7e75cb4e8ad2b34c51f72a">CLANNAD</a></li>
@@ -31,8 +31,8 @@
     </ul>
     <p><strong>MY CONTACT INFORMATION:</strong></p>
     <ul>
-      <li>E-mail: zhixingtong0608@126.com</li>
-      <li>Phone#: +86 159 5169 3346</li>
+      <li>E-mail: u3656761@connect.hku.hk</li>
+      <li>Phone#: +852 6940 1235</li>
       <li>QQ: 1823575004<img src="images/QQ.png" alt="QQ.jpg" style="width: 25%; height: auto;"/></li>
       <li>WeChat: ijichi_kotomi<img src="images/WeChat.jpg" alt="WeChat.jpg" style="width: 25%; height: auto;"/></li>
     </ul>
